# simpler_timer

./: .gitignore  README.md  pyproject.toml  simpler_timer.py
src/simpler_timer/: __init__.py
